Mobile whitespace issue fix

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -716,6 +716,8 @@
     .team-info {
         gap: 10px;
         margin-left: 10px;
+        flex-wrap: wrap;
+        
 
 
 
